language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_for_invalid_constant_todo_message_still_works_2.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

const wibble = 1
const wobble = todo as [wibble]
                        ↑      

----- Jumped to `src/app.gleam`

const wibble = 1
↑▔▔▔▔▔▔▔▔▔▔▔    
const wobble = todo as [wibble]
