language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_type_definition_can_jump_to_all_types_in_a_function_type.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
Jumping to type definition

----- Jumping from `src/app.gleam`

import wibble.{type Wibble}
import wobble.{type Wobble}
import box.{type Box}

pub fn main() {
  let a = fn(wibble: Wibble) { box.Box(wobble.Wobble) }
  ↑                                                    
}

----- Jumped to `dep/src/wibble.gleam`
pub type Wibble { Wibble }
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔           


----- Jumped to `dep/src/box.gleam`
pub type Box(a) { Box(a) }
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔           


----- Jumped to `dep/src/wobble.gleam`
pub type Wobble { Wobble }
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔
