language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_type_definition_can_jump_to_multiple_types.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
Jumping to type definition

----- Jumping from `src/app.gleam`

import wibble.{type Wibble, Wibble}
import box.{Box}

pub fn main() {
  let a = Box(Wibble)
  ↑                  
}

----- Jumped to `dep/src/box.gleam`
pub type Box(a) { Box(a) }
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔           


----- Jumped to `dep/src/wibble.gleam`
pub type Wibble { Wibble }
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔
