language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_type_definition_in_different_file_of_same_project.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
Jumping to type definition

----- Jumping from `src/app.gleam`

import wibble.{type Wibble}

pub fn main() {
  use_wibble(todo)
             ↑    
}

pub fn use_wibble(wibble: Wibble) { todo }

----- Jumped to `src/wibble.gleam`
pub type Wibble
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔
