language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_type_definition_in_same_file.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
Jumping to type definition

----- Jumping from `src/app.gleam`

pub type Wibble {
  Wibble
}

pub fn main() {
  let x = Wibble
  x
  ↑
}

----- Jumped to `src/app.gleam`

pub type Wibble {
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔  
  Wibble
}

pub fn main() {
  let x = Wibble
  x
}
